--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="js/libs/flashcanvas/flashcanvas.js"></script>
         <![endif]-->
     </head>
     <body>
