--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/style.css">
-        <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Satisfy&amp;text=DrawIt' rel='stylesheet' type='text/css'>
 
 
         <!--[if lt IE 9]>
