--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
     <div id="main">
         <button id="clearCanvas">Clear Canvas</button>
         <button id="submitDrawing">Submit Drawing</button>
+        <input id="colorPicker" value="#df4b26"></input>
         <canvas id="canvas" height="400" width="600"></canvas>
         <ol></ol>
 	</div>
 
     <footer>Brought to you by Alex Normand & Suley M.</footer>
-    
+
     <script data-main="js/main" src="js/libs/require/require.js"></script>
-	</body>		
+	</body>
 </html>
 
 
