updated style & template

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ol></ol>
 	</div>
 
-    <footer>Brought to you by Alex Normand & Suley M.</footer>
+    <footer>Brought to you by Alex Normand</footer>
 
     <script data-main="js/main" src="js/libs/require/require.js"></script>
 	</body>
