added touch devices support

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Draw It</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport"
+              content="user-scalable=no,height=device-height,width=device-width,initial-scale=1.0,maximum-scale=1.0">
 
         <link rel="stylesheet" href="css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Satisfy&amp;text=DrawIt' rel='stylesheet' type='text/css'>
@@ -25,7 +26,7 @@
         <button id="clearCanvas">Clear Canvas</button>
         <button id="submitDrawing">Submit Drawing</button>
         <input id="colorPicker" value="#df4b26"></input>
-        <canvas id="canvas" height="400" width="600"></canvas>
+        <canvas id="canvas" height="350" width="320"></canvas>
         <ol></ol>
 	</div>
 
