--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         <h1 class="mainTitle">Draw It!</h1>
     </header>
     <div id="main">
-        <button id="clearCanvas">Clear Canvas</button>
-        <button id="submitDrawing">Submit Drawing</button>
-        <input id="colorPicker" value="#df4b26"></input>
         <canvas id="canvas" height="350" width="320"></canvas>
+        <div class="controls">
+            <button id="clearCanvas">Clear Canvas</button>
+            <button id="submitDrawing">Submit Drawing</button>
+            <input id="colorPicker" value="#df4b26"></input>
+        </div>
         <ol></ol>
 	</div>
 
